# LMI_AI_Solutions

./: .gitignore  README.md  conftest.py
anomaly_detectors/: README.md  pyproject.toml
anomaly_detectors/ad_core/: __init__.py  anomaly_detector.py  (+1 more)
classifiers/: README.md
lmi_utils/: README.md  pyproject.toml
lmi_utils/data_utils/: move_images_to_test.py  parse_factory_data.py  train_test_split.py
lmi_utils/dataset_utils/: file_utils.py  mask_encoder.py  representations.py
lmi_utils/dataset_utils/ops/: dataset_crop_by_label.py  dataset_pad.py  dataset_resize.py  dataset_rotate.py
lmi_utils/eval_utils/: iou_from_csv.py  iou_from_csv2.py  pr_curve.py
lmi_utils/gadget_utils/: gadget_image_utils.py  gadget_surface_utils.py  pipeline_utils.py  profile_to_hmap.py
lmi_utils/image_utils/: alignment_utils.py  flip_image.py  img_pad.py  img_resize.py  img_rotate.py  img_stretch.py  img_tile.py  make_collage.py  merge_pred_with_orig.py  numpy_utils.py  path_utils.py  rgb_converter.py  sample_image.py  split_stack_image.py  tiff_2_png.py  tile_image.py  tiler.py
lmi_utils/label_utils/: apply_ops.py  csv_to_coco.py  csv_to_json.py  csv_to_yolo.py  gadget_to_lst.py  json_to_csv.py  json_to_yolo.py  lst_to_json.py  pad_with_csv.py  plot_coco_json.py  plot_utils.py  plot_with_json.py  plot_yolo_labels.py  yolo_to_csv.py
lmi_utils/label_utils/deprecate/: group_by_class.py
lmi_utils/system_utils/: path_utils.py
object_detectors/: README.md  pyproject.toml
ocr_models/: README.md
tests/: docker-compose.yaml  dockerfile  dockerfile.v0  run_tests.sh
(+28 files in other folders)
