[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "lmi_utils"
version = "0.0.0"
description = "Utility functions and scripts for LMI AI Solutions."
dependencies = [
    "opencv-python",
    "pycocotools",
    "torch",
    "label-studio-sdk"
]

[tool.setuptools]
packages = ["data_utils", "eval_utils", "gadget_utils", "image_utils", "label_utils", "pcl_utils", "system_utils", "postprocess_utils", "dataset_utils"]

[project.scripts]
# label utils commands
labels-preprocess = "label_utils.apply_ops:main"
labels-convert-yolo = "label_utils.json_to_yolo:main"
labels-convert-lst = "label_utils.lst_to_json:main"
# feel free to add more label utils commands here
# gadget utils commands
gadget-surface = "gadget_utils.gadget_surface_utils:main"
gadget-image = "gadget_utils.gadget_surface_utils:main"

